# DoxygenEverything

./: .gitignore  CMakeLists  CMakeLists.txt  CMakeUserPresets.json  CmakePresets.json  MainWindow.cpp  MainWindow.h  MainWindow.ui  ReadMe.md  main.cpp
cmake/: CMakeDoxygen.txt
